# canp

./: API_REFERENCE.md  ARCHITECTURE.md  Cargo.toml  DBC_PARSER_SUMMARY.md  PROJECT_SUMMARY.md  README.md  SUMMARY.md  TESTING_STRATEGY.md  clean_docs  fix_remaining_docs  generate_test_file.py  pixi.toml  pyproject.toml  remove_complex_docs  task.md  test_file_format.rs
benches/: benchmarks.rs  dbc_parser_bench.rs  memory_pool_bench.rs  thread_pool_bench.rs
can-dbc/can-dbc/: .cargo-checksum.json  Cargo.toml
can-dbc/clap/: .cargo-checksum.json
can-dbc/clap_builder/: .cargo-checksum.json
can-dbc/lock_pool/: .cargo-checksum.json  Cargo.toml
can-dbc/metrics-exporter-prometheus/: .cargo-checksum.json
can-dbc/ref_count/: .cargo-checksum.json  Cargo.toml
docs/: README.md  advanced_rust_patterns.md  error_handling_logging.md  memory_management.md  performance_optimization.md  project_libraries_guide.md  rayon_parallel.md  rust_basics.md  rust_closures_guide.md  rust_leetcode_guide.md  testing_benchmarking.md  tokio_async.md
examples/: Cargo.toml  basic_usage.py  complete_pipeline_demo.rs  complex.dbc  generate_test_data.rs  layer_parser_example.rs  performance_monitor_example.rs  pipeline_example.rs  sample.dbc  task_processing_example.rs  test_dbc_parser.rs
examples/src/: main.rs
scripts/: activate.bat  activate.sh  run_tests.sh
src/: columnar_storage.rs  data_layer_parser.rs  dbc_parser.rs  high_performance_executor.rs  layer_parser.rs  lib.rs  main.rs  memory_pool.rs  performance.rs  pipeline.rs  processing_pipeline.rs  test_data_generator.rs  thread_pool.rs  zero_copy_memory_pool.rs
src/canp/: __init__.py  config.py  dbc.py  executor.py  memory.py  pipeline.py  storage.py
src/subcanp/: Cargo.toml
src/subcanp/src/: high_performance_executor.rs  lib.rs  main.rs  memory_pool.rs  test_mem.rs  zero_copy_memory_pool.rs
tests/: integration_tests.rs  property_tests.rs
tests/common/: mod.rs
tests/unit/: test_basic.py  test_config.py
